--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> EasyShope </title>
+  <title> EasyShop </title>
   <link rel="stylesheet" href="./css/style.css" />
-  <!-- Latest compiled and minified CSS -->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" /> -->
-
+  <!-- ============= Latest bootstrap CSS ============ -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-  <!-- google Montserrat  font  -->
+  <!-- =========== Google Montserrat  font ============= -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
@@ -23,30 +20,27 @@
 <body>
   <header></header>
   <main class="main container">
-    <!-- search field -->
-    <div class="search-field">
-      <div class="search-box">
-        <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
-          autocomplete="off" id="search-btn" onclick="loadProducts()">
-          Search
-        </button>
-      </div>
+    <h1 class="text-center mb-2 mt-5 heading-text">Welcome to<span class="easy-shop"> EasyShop !!!</span>
+    </h1>
+    <!-- ============ Search Field =========== -->
+    <div class="d-flex mt-5 mb-5 w-50 m-auto">
+      <input class="form-control me-2" type="search" placeholder="Search Your Favorite Product" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
     </div>
 
     <div class="row">
-      <!-- dynamically product load -->
+      <!-- ============= Dynamically product load ========= -->
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
         </div>
       </div>
 
-      <!-- Add to curt section -->
+      <!-- ============= Add to curt section ============== -->
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
         <div class="cart" id="my-cart">
           <table class="table">
             <thead>
-              <h1>My-Cart</h1>
+              <h1 class="fs-2 text-success">My-Cart</h1>
               <tr>
                 <th scope="col"></th>
                 <th scope="col"></th>
@@ -69,7 +63,7 @@
               </tr>
               <tr>
                 <th>Delivery-Charge:</th>
-                <td>$ <span id="delivery-charge">20</span></td>
+                <td>$ <span id="delivery-charge">0</span></td>
                 <td></td>
                 <td></td>
               </tr>
@@ -95,7 +89,7 @@
   </main>
   <footer></footer>
 
-  <!-- add javascript  file  -->
+  <!-- ============== Add javascript File ============== -->
   <script src="./js/app.js"></script>
 </body>
 
