--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   <!-- ================ Font awsome cdn ============ -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+
+  <!-- ============ Fave icon =========== -->
+  <link rel="shortcut icon" href="icon/easyshop.jpg" type="image/x-icon">
+
 </head>
 
 <body>
@@ -44,7 +48,7 @@
         <div class="cart" id="my-cart">
           <table class="table">
             <thead>
-              <h1 class="fs-2 text-success">My-Cart</h1>
+              <h1 class="fs-2 easy-shop">My-Cart</h1>
               <tr>
                 <th scope="col"></th>
                 <th scope="col"></th>
@@ -52,7 +56,7 @@
                 <th scope="col"></th>
               </tr>
             </thead>
-            <tbody>
+            <tbody class="easyshop-cart">
               <tr>
                 <th>Total Added-Products:</th>
                 <td> <span id="total-Products">0</span></td>
@@ -85,7 +89,7 @@
             </tbody>
           </table>
           <div class="parces text-center">
-            <button class="btn btn-primary text-center">Buy Now</button>
+            <button class="btn btn-warning text-center">Buy Now</button>
           </div>
         </div>
       </div>
