--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="cart" id="my-cart">
           <table class="table">
             <thead>
-              <h1 class="fs-2 easy-shop">My-Cart</h1>
+              <h1 class="fs-2">My-Cart</h1>
               <tr>
                 <th scope="col"></th>
                 <th scope="col"></th>
