--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title> EasyShop </title>
   <link rel="stylesheet" href="./css/style.css" />
-  <!-- ============= Latest bootstrap CSS ============ -->
+  <!-- ============= Latest Bootstrap CSS ============ -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
@@ -30,7 +30,7 @@
   <main class="main container">
     <h1 class="text-center mb-2 mt-5 heading-text">Welcome to<span class="easy-shop"> EasyShop !!!</span>
     </h1>
-    <!-- ============ Search Field =========== -->
+    <!-- ============ Search Field option =========== -->
     <div class="d-flex mt-5 mb-5 w-50 m-auto">
       <input class="form-control me-2" type="search" placeholder="Search Your Favorite Product" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">Search</button>
